
add_executable(1000 1000.cpp)
add_executable(1090 1090.cpp)
add_executable(1091 1091.cpp)
add_executable(1092 1092.cpp)
add_executable(1093 1093.cpp)
add_executable(1095 1095.cpp)
add_executable(1096 1096.cpp)
add_executable(1001 1001.cpp)
add_executable(2000 2000.cpp)
add_executable(2001 2001.cpp)
add_executable(2002 2002.cpp)