
add_executable(1000 HDOJ/1000.cpp)
add_executable(1090 HDOJ/1090.cpp)
add_executable(1091 HDOJ/1091.cpp)
add_executable(1092 HDOJ/1092.cpp)
add_executable(1093 HDOJ/1093.cpp)
add_executable(1095 HDOJ/1095.cpp)
add_executable(1096 HDOJ/1096.cpp)
add_executable(1001 HDOJ/1001.cpp)
add_executable(2000 HDOJ/2000.cpp)
add_executable(2001 HDOJ/2001.cpp)
add_executable(2002 HDOJ/2002.cpp)
add_executable(2003 HDOJ/2003.cpp)
add_executable(2004 HDOJ/2004.cpp)
add_executable(2005 HDOJ/2005.cpp)
add_executable(2006 HDOJ/2006.cpp)
add_executable(2007 HDOJ/2007.cpp)
add_executable(1585 UVA/1585.cpp)

add_executable(1585-1 UVA/1585-1.cpp)
add_executable(272 UVA/272.cpp)
add_executable(10082 UVA/10082.cpp)